[package]
name = "flaskapp"
version = "0.5.2"
edition = "2021"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
equix = { version = "0.2.3" }
clap = { version = "4.5.37", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
anyhow = "1.0.75"
sysinfo = "0.30"
libp2p = { git = "https://github.com/libp2p/rust-libp2p.git", rev = "da0017ee887a868e231ed78c7de892779c17800d" }
tempfile = "3.8.1"
rand = { version = "0.8.5" }
x25519-dalek = { version = "2.0.1" }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hkdf = { version = "0.12.4" }
sha2 = { version = "0.10.9" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
crossbeam-queue = "0.3"
futures = "0.3"
uuid = { version = "1.6.1", features = ["v4"] }
hex = { version = "0.4.3" }
async-nats = "0.42.0"
async-trait = "0.1"
serde_json = { version = "1" }
axum = { version = "0.8.4" }
bytes = { version = "1.10.1" }
hyper = { version = "0.14", features = ["full"] }
rustls = "0.23"
quiver = { git = "https://github.com/swpsco/quiver.git", rev = "629366bd292d14d6ee43026e3107e7cf934f4f9c" }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
directories = "5.0"

libloading = "0.8.8"

# nockchain
nockchain = { git = "https://github.com/swpsco/nockchain.git", rev = "7f64fd35bb1e70048a60b8fc397416c0f81921ad", package = "nockchain" }
nockvm = { git = "https://github.com/swpsco/nockchain.git", rev = "7f64fd35bb1e70048a60b8fc397416c0f81921ad", package = "nockvm" }
nockapp = { git = "https://github.com/swpsco/nockchain.git", rev = "7f64fd35bb1e70048a60b8fc397416c0f81921ad", package = "nockapp" }
zkvm-jetpack = { git = "https://github.com/swpsco/nockchain.git", rev = "7f64fd35bb1e70048a60b8fc397416c0f81921ad", package = "zkvm-jetpack" }
nockvm_macros = { git = "https://github.com/swpsco/nockchain.git", rev = "7f64fd35bb1e70048a60b8fc397416c0f81921ad", package = "nockvm_macros" }
nockchain-libp2p-io = { git = "https://github.com/swpsco/nockchain.git", rev = "7f64fd35bb1e70048a60b8fc397416c0f81921ad", package = "nockchain-libp2p-io" }
kernels = { git = "https://github.com/swpsco/nockchain.git", rev = "7f64fd35bb1e70048a60b8fc397416c0f81921ad", package = "kernels" }

[features]
default = []
gpu = []
